<resources>
    <string name="app_name">SignUpForm</string>
    <string name="pageName">Register</string>
    <string name="usernameEditText">Username</string>
    <string name="emailEditText">E-Mail Address</string>
    <string name="passwordEditText">Password</string>
    <string name="passwordconfirmationEditText">Confirm Password</string>
    <string name="btnName">Register</string>
</resources>